Fixed spacing for Our Purpose area

--- a/Style.css
+++ b/Style.css
@@ -423,6 +423,7 @@ nav ul li a:hover {
     background-image: linear-gradient(to right, grey, #c421c4);
     text-align: center;
     align-items: center;
+    padding-top: 50px; /* Add padding to move the content down */
 }
 
 .about-header {
@@ -430,6 +431,7 @@ nav ul li a:hover {
     font-family: 'Fredoka One', cursive;
     padding-top: 20px;
     color: #fff; /* Adding this line to make the header visible */
+    margin: 50px;
 }
 
 p {
@@ -450,10 +452,11 @@ p {
 }
 
 .about-text {
-    width: 100%;
-    height: 100vh;
-    background-color: #535353;
+    width: 70%;
+    height: 30vh;
+    color: #535353;
     text-align: center;
+    margin: 0 auto; /* Horizontal centering */
 }
 
 
